change img name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <a class="card__link" href="#">
                                 <div class="description">
                                     <div class="description__albert">
-                                        <img class="description__img" src="./img/image 2.png" alt="photo albert flores">
+                                        <img class="description__img" src="./img/image2.png" alt="photo albert flores">
 
                                     </div>
                                     <p class="description__name">
@@ -44,7 +44,7 @@
                             <a class="card__link" href="#">
                                 <div class="description">
                                     <div class="description__albert">
-                                        <img class="description__img" src="./img/image 2 (2).png"
+                                        <img class="description__img" src="./img/image2(2).png"
                                             alt="photo Arlene McCoy">
 
                                     </div>
@@ -63,7 +63,7 @@
                             <a class="card__link" href="#">
                                 <div class="description">
                                     <div class="description__albert">
-                                        <img class="description__img" src="./img/image 2 (1).png"
+                                        <img class="description__img" src="./img/image2(1).png"
                                             alt="photo Annette Black">
                                     </div>
                                     <p class="description__name">
@@ -89,7 +89,7 @@
                     <div class="block">
                         <div class="block__california">
                             <p class="block__subtitle">Best Faculty from New York is</p>
-                            <p class="block__title">Now Available in California!</p>
+                            <h5 class="block__title">Now Available in California!</h5>
                         </div>
                         <div class="block__text">
                             <p>Our Faculty is common in all the branches which helps us to maintain the quality education across India. Now there is no need to go anywhere!</p>
